# doorstop

./: .appveyor.yml  .coveragerc  .editorconfig  .env  .flake8  .gitattributes  .gitignore  .gititnore  .gitlab-ci.yml  .isort.cfg  .mypy.ini  .noserc  .pep257  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .project  .pycodestyle.ini  .pydevproject  .pylint.ini  .pylintrc  .readthedocs.yaml  .scrutinizer.yml  .sgignores  .tool-versions  .travis.yml  .verchew.ini  .vvignores  CHANGELOG.md  CHANGES.md  CHANGES.rst  CHANGES.txt  CONTRIBUTING.md  Doorstop.sublime-project  HLT.html  HLT.md  HLT.txt  LICENSE.md  LLT.html  LLT.md  LLT.txt  (+28 more)
.github/: dependabot.yml
.github/workflows/: _common.yml  change-coverage.yml  check_change_coverage.sh  codeql-analysis.yml  execute-tests.yml  makefile.yml  test-linux.yml  test-osx.yml  test-windows.yml  tminer.yml
Code/Backend/: codeForTesting.py  traceability.py  unitTests.py
assets/doorstop/: sidebar.css
docs/: ISO29148_example.qdc  README-github.html  README-pypi.html  Wireframe.gdraw  Wireframe2.gdraw  Wireframe_1.gdraw  Wireframe_2.gdraw  Wireframe_3.gdraw  Wireframe_4.gdraw  codebook-example-ISO29148.qdc  examples.md  generate.py  requirements.txt  setup.md  web.md
docs/api/: scripting.md
docs/assets/: logo.xcf
docs/cli/: creation.md  interchange.md  publishing.md  reordering.md  validation.md
docs/getting-started/: dependencies.md  installation.md  quickstart.md  setup.md
docs/gui/: coming-soon.md  overview.md
docs/paper/: Content.gdoc  JSEA-template.doc  JSEA-template.doc.gdoc  Presentation.gslides
docs/reference/: document.md  item.md  items.md  tree.md  webserver.md
docs/reqs/: .doorstop.yml  REQ001.yml  REQ002.yml  REQ003.yml  REQ004.yml  REQ005.yml  REQ006.yml  REQ007.yml  REQ008.yml  REQ009.yml  REQ010.yml  REQ011.yml  REQ012.yml  REQ013.yml  REQ014.yml  REQ015.yml  REQ016.yml  REQ017.yml  index.yml
docs/reqs/tutorial/: TUT001.yml  TUT002.yml  TUT003.yml  TUT004.yml  TUT005.yml  TUT006.yml  TUT007.yml  TUT008.yml  TUT009.yml  TUT010.yml  TUT011.yml  TUT012.yml  TUT013.yml  TUT014.yml  TUT015.yml  TUT016.yml  index.yml
docs/sphinx/: conf.py
docs/sphinx/output/: .buildinfo  doorstop.cli.html  doorstop.cli.test.html  doorstop.core.html  doorstop.core.test.html  doorstop.core.vcs.html  doorstop.core.vcs.test.html  doorstop.gui.html  doorstop.gui.test.html  doorstop.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  run_sphinx.html  search.html  searchindex.js
doorstop/: __init__.py  cli.py  commands.py  common.py  exchange.py  item.py  main.py  settings.py
doorstop/cli/: __init__.py  commands.py  main.py  settings.py  utilities.py
doorstop/cli/test/: __init__.py  test_all.py  test_main.py  test_tutorial.py  test_utilities.py
doorstop/cli/tests/: __init__.py  test_all.py  test_main.py  test_tutorial.py  test_utilities.py  tutorial.py
doorstop/core/: __init__.py  base.py  builder.py  document.py  editor.py  exchange.py  exporter.py  importer.py  item.py  main.py  processor.py  publisher.py  publisher_latex.py  reference_finder.py  report.py  template.py  tree.py  types.py  yaml_validator.py
doorstop/core/files/: doorstop.css  sidebar_template.html  template.html  valMatrix.css
doorstop/core/my_programs/: finder.py  valMatrix.py  verMatrix.py
doorstop/core/publishers/: _latex_functions.py  asciidoc.py  base.py  html.py  latex.py  markdown.py  text.py
doorstop/core/scm/: __init__.py  base.py  veracity.py
doorstop/core/test/: __init__.py  test_all.py  test_all.py.orig  test_builder.py  test_document.py  test_exchange.py  test_exporter.py  test_importer.py  test_item.py  test_item.py.orig  test_main.py  test_processor.py  test_profiling.py  test_publisher.py  test_report.py  test_tree.py  test_types.py
doorstop/core/tests/: __init__.py  helpers.py  helpers_latex.py  test_all.py  test_builder.py  test_common.py  test_document.py  test_exporter.py  test_importer.py  test_item.py  test_item_extensions.py  test_item_validator.py  test_publisher.py  test_publisher_latex.py  test_publisher_latex_doc.py  test_publisher_latex_environments.py  test_reference_finder.py  test_template.py  test_tree.py  util.py  (+2 more)
doorstop/gui/: TODO  __init__.py  action.py  application.py  main.py  reducer.py  resources.py  state.py  store.py  utilTkinter.py  widget.py
doorstop/scm/: __init__.py  base.py  git.py
doorstop/server/: __init__.py  client.py  main.py  utilities.py
doorstop/test/: __init__.py  test_cli.py  test_commands.py  test_document.py  test_exchange.py  test_item.py  test_main.py  test_processor.py  test_report.py
doorstop/tests/: test_init.py
doorstop/views/: base.tpl  document_list.tpl  doorstop.tpl  index.tpl  sidebar.tpl
doorstop/web/: client.py  server.py  utilities.py
hooks/: check_unreviewed_requirements.sh
pages/: CNAME  index.html  params.json
pages/stylesheets/: stylesheet.css
reqs/: .doorstop.yml  REQ001.yml  REQ002.yml  REQ003.yml  REQ004.yml  REQ006.yml  REQ007.yml  REQ008.yml  REQ009.yml  REQ010.yml  REQ011.yml  REQ012.yml  REQ013.yml  REQ014.yml  REQ015.yml  REQ016.yml  REQ017.yml  REQ018.yml  REQ019.yml  RQ001.yml  RQ002.yml
reqs/ext/: .doorstop.yml  .req_sha_item_validator.py  EXT001.yml  EXT002.yml
reqs/tutorial/: .doorstop.yml  TUT001.yml  TUT002.yml  TUT003.yml  TUT004.yml  TUT005.yml  TUT006.yml  TUT007.yml  TUT008.yml  TUT009.yml  TUT010.yml  TUT011.yml  TUT012.yml  TUT013.yml  TUT014.yml  TUT015.yml  TUT016.yml  TUT017.yml  TUT018.yml  TUT019.yml  TUT020.yml  TUT021.yml  TUT022.yml  TUT023.yml  TUT024.yml  TUT025.yml  TUT026.yml
requirements/: REQ001.yml  REQ004.yml  REQ006.yml  REQ008.yml  REQ012.yml  REQ014.yml  REQ018.yml
requirements/tutorial/: .doorstop.yml  TUT001.yml  TUT003.yml  TUT004.yml  TUT005.yml  TUT010.yml  TUT014.yml  TUT015.yml  TUT016.yml  TUT017.yml  TUT018.yml  TUT019.yml  TUT020.yml
skills/doorstop/: README.md  SKILL.md
systemtest/: __init__.py  setup.cfg  test_cli.py
tests/integration/: .gitignore  Makefile  lit.cfg
views/: base.tpl  document_list.tpl  index.tpl  item_list.tpl  server.tpl  sidebar.tpl
(+249 files in other folders)
