[project]
name = "doorstop"
version = "3.0.2"
description = "Requirements management using version control."
readme = "README.md"
license = { text = "LGPLv3" }
authors = [{ name = "Jace Browning", email = "jacebrowning@gmail.com" }]
requires-python = ">=3.9,<3.14"
keywords = [
  "requirements-management",
  "version-control",
  "documentation",
  "traceability",
  "markdown",
  "certification",
  "html",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Editors :: Documentation",
  "Topic :: Text Processing :: Markup",
]

dependencies = [
  "pyyaml>=6.0",
  "markdown>=3.3.3",
  "bottle~=0.13.4",
  "requests>=2.0",
  "python-frontmatter>=1.0",
  "python-markdown-math~=0.6",
  "plantuml-markdown>=3.4.2",
  "six",
  "openpyxl>=3.1.2",
  "verchew>=3.4.2",
]

[dependency-groups]
dev = [
  # Formatters
  "black>=24.3",
  "isort>=5.12",

  # Linters
  "mypy>=1.1.1",
  "pydocstyle",
  "pylint~=3.2.0",
  "types-markdown",
  "types-pyyaml",
  "types-requests",
  "types-setuptools",

  # Testing
  "pytest>=6.2.5",
  "pytest-cov",
  "pytest-expecter",
  "pytest-sugar",
  "webtest>=3.0.0",
  "diff-cover>=8.0.3",

  # Reports
  "coveragespace>=6.1",

  # Documentation
  "mkdocs>=1.5",
  "pygments",

  # Tooling
  "pyinstaller",
  "sniffer",
  "macfsevents; sys_platform == 'darwin' and python_version < '3.13'",
  "pync; sys_platform == 'darwin'",
  "rope",
]

[project.scripts]
doorstop = "doorstop.cli.main:main"
doorstop-gui = "doorstop.gui.main:main"
doorstop-server = "doorstop.server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
quiet = true

[tool.isort]
profile = "black"
